@@ -290,7 +290,12 @@ class JobDipatcher:
                 return response.encode()
         # add metadata
         if metadata != '':
-            self.taskBuffer.addMetadata([jobID],[metadata])
+            ret = self.taskBuffer.addMetadata([jobID],[metadata])
+            if len(ret) > 0 and not ret[0]:
+                _logger.debug("updateJob : %s failed to add metadata" % jobID)
+                # return succeed
+                response=Protocol.Response(Protocol.SC_Success)
+                return response.encode()
         # add stdout
         if stdout != '':
             self.taskBuffer.addStdOut(jobID,stdout)
